[gd_scene load_steps=5 format=3 uid="uid://duoidkopi2o1i"]

[ext_resource type="Script" path="res://quiz/QuizController.gd" id="1_8osvi"]
[ext_resource type="PackedScene" uid="uid://cpo757j58sgpi" path="res://levels/level_2.tscn" id="2_q7sxl"]
[ext_resource type="Resource" uid="uid://bmljji4apg5rr" path="res://quiz/resources/world1/world1_theme.tres" id="3_atxnp"]
[ext_resource type="Texture2D" uid="uid://b7m3fgaobuaib" path="res://assets/sprites/effects/Solid_white.png" id="4_mdbix"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8osvi")
next_scene = ExtResource("2_q7sxl")
quiz = ExtResource("3_atxnp")
color_right = Color(0, 1, 0, 1)
color_wrong = Color(1, 0, 0, 1)

[node name="Background" type="TextureRect" parent="Control"]
self_modulate = Color(0.678431, 0.678431, 0.678431, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mdbix")

[node name="CardBackground" type="TextureRect" parent="Control/Background"]
self_modulate = Color(0.286275, 0.207843, 0.490196, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 352.0
offset_top = 29.0
offset_right = -352.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mdbix")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = 45.0
offset_right = -88.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="QuestionText" type="Label" parent="Control/Background/CardBackground/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pergunta"
horizontal_alignment = 1

[node name="VBoxContainerOptions" type="VBoxContainer" parent="Control/Background/CardBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button1" type="Button" parent="Control/Background/CardBackground/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Opção 1
"

[node name="Button2" type="Button" parent="Control/Background/CardBackground/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Opção 2
"

[node name="Button3" type="Button" parent="Control/Background/CardBackground/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Opção 3"

[node name="Button4" type="Button" parent="Control/Background/CardBackground/VBoxContainer/VBoxContainerOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Opção 4"

[node name="LabelExplanation" type="Label" parent="Control/Background/CardBackground/VBoxContainer"]
layout_mode = 2
text = "Explicação da resposta certa"

[node name="NextQuestionButton" type="Button" parent="Control/Background/CardBackground"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "Próxima Pergunta"

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="Control/Background/CardBackground"]

[node name="AudioWrong" type="AudioStreamPlayer2D" parent="Control/Background/CardBackground"]

[node name="QuizOver" type="Control" parent="Control/Background"]
visible = false
anchors_preset = 0
offset_left = 342.0
offset_top = 26.0
offset_right = 936.0
offset_bottom = 694.0

[node name="BackGround" type="TextureRect" parent="Control/Background/QuizOver"]
self_modulate = Color(0.411765, 0.454902, 0.588235, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mdbix")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/QuizOver/BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
layout_mode = 2
text = "Quiz Finalizado"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
layout_mode = 2
text = "Você Acertou:"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
layout_mode = 2
text = "0/0"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/Background/QuizOver/BackGround/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[connection signal="button_down" from="Control/Background/CardBackground/NextQuestionButton" to="Control" method="_on_next_question_button_button_down"]
[connection signal="button_down" from="Control/Background/QuizOver/BackGround/VBoxContainer/ContinueButton" to="Control" method="_on_continue_button_button_down"]
